# ex03

./: Dockerfile-miner  Dockerfile-server  blockChain.cpp  blockChain.h  miner.cpp  mtacoin.conf  server  server.cpp
minerFolder/: CMakeLists.txt  Dockerfile-miner  miner.cpp
serverFolder/: CMakeLists.txt  Dockerfile-server  server.cpp
